--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "OTMzMzEwNzg3OTI0MTQ4MjM0.GOL-3F.z2LALq60QkOnlh3Tc559pGUvo60fdAkMqr5cvY",
+    "token": "token here",
     "prefix": "c!",
-    "mongo_server": "mongodb+srv://Tohru:khoai0908@cluster0.cgcnc.mongodb.net/?retryWrites=true&w=majority",
+    "mongo_server": "mongodb here",
     "loadSlashsGlobal": true, "_COMMENT_": "Set it to true, when your Slash Commands are ready, false loads instant true loads slow but stable! (GLOBAL/GUILD COMMANDS, DISCORD DOCS!)",
     "slashCommandsDirs": [
           {
